--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,30 +5,35 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-<application
-    android:allowBackup="true"
-    android:icon="@mipmap/ic_launcher"
-    android:label="@string/app_name"
-    android:supportsRtl="true"
-    android:theme="@style/AppTheme">
-    <activity android:name=".StartActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".StartActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
 
-    <activity android:name=".AttendeeSearchActivity" />
-    <activity android:name=".AttendeeConfirmActivity"></activity>
+        <activity android:name=".AttendeeSearchActivity" />
+        <activity android:name=".AttendeeConfirmActivity"></activity>
 
-    <activity android:name="MainActivity" />
-    <activity android:name=".ActActivity" />
+        <activity android:name="MainActivity" />
+        <activity android:name=".ActActivity" />
 
-    <activity
-        android:name=".Menu"
-        android:label="@string/app_name">
-    </activity>
+        <activity
+            android:name=".Menu"
+            android:label="@string/app_name">
+        </activity>
 
-</application>
+        <activity
+            android:name=".List"
+            android:label="@string/app_name">
+        </activity>
+
+    </application>
 </manifest>
